--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "git@github.com:zaguiini/create-sandbox.git",
   "author": "Luis Felipe Zaguini <luisfelipezaguini@gmail.com>",
   "license": "MIT",
+  "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+  "type": "module",
   "bin": {
     "create-sandbox": "dist/index.js"
   },
@@ -23,5 +25,8 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "commander": "^8.3.0"
   }
 }
