--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "es2020",
+    "module": "es2020",
     "rootDir": "./src",
     "moduleResolution": "node",
     "baseUrl": "./",
