--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "ora": "^6.0.1",
+    "simple-git": "^2.48.0"
   }
 }
